# autonomous-coding-agents

./: .bundle-limits.json  .dockerignore  .env.docker.example  .env.example  .env.production  .gitignore  AGENTS.md  Agent.md  CHANGELOG.md  CLAUDE.md  Dockerfile  FEATURE_LIST.md  GEMINI.md  GETTING_STARTED.md  LANGUAGE_CHOICE.md  MONOREPO_VS_MULTIREPO_ANALYSIS.md  MULTI_AGENT_SYSTEM_DESIGN.md  NEXT_STEPS.md  PRD.md  README.md  REPOSITORY_STRUCTURE.md  codecov.yml  docker-compose.test.yml  docker-compose.yml  ecosystem.config.js  eslint.config.js  jest.config.js  package.json  playwright.config.ts  tsconfig.json
.claude/: system_prompt_additions.md
.github/: dependabot.yml  pull_request_template.md
.serena/: project.yml
benchmarks/: sample-suite.json
claudedocs/: I15-I16-D1-implementation-plan.md
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  main.rs
docs/: CLI_USAGE.md  DEPLOYMENT.md  INTERACTIVE_MODE.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  README.md  TESTING.md  VISION.md  WEBHOOK_SETUP.md
migrations/: 001_initial_schema.ts
prisma/: schema.prisma
schemas/: a2a-economic-contract.schema.json  feature-mcp-tool-contract.schema.json  feature.schema.json  ticket.schema.json
scripts/: build-docs-compact.ts  bundle-analysis.ts  check-skipped-tests.ts  db-migrate.ts  generate-openapi.ts  generate_icons.py  query-docs-compact.ts  smoke-test-llm.ts  start-test-server.ts  verify-package.ts
src/: index.ts
src/api/: gateway.ts  (+4 more)
web/: Dockerfile  index.html  nginx.conf  package.json
(+1723 files in other folders)
